# gentimer

./: .gitignore  DEV.md  README.md  noxfile.py  pyproject.toml
docs/: conf.py  index.rst  readme.rst  reference.rst
src/gentimer/: __init__.py  _typed.py  timer_qt.py  timer_sched.py  timer_tk.py  timer_wx.py
tests/: test_import.py  test_qt.py  test_run_main.py  test_sched.py  test_tk.py  test_wx.py
