[tool.poetry]
name = "gentimer"
version = "0.1.0"
description = "Utility to make generator to be consumed in event-loop timer"
authors = ["teamikl"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
darglint = "^1.7.0"

[tool.poetry.dev-dependencies]
flake8-docstrings = "^1.5.0"
pytest = "^6.2.2"
coverage = {extras = ["toml"], version = "^5.5"}
pytest-cov = "^2.11.1"
mypy = "^0.812"
sphinx = "^3.5.2"
PyQt5 = "^5.15.3"
wxPython = "^4.1.1"

[tool.pytest.ini_options]
filterwarnings = "ignore::DeprecationWarning:pyreadline.*:"

[tool.coverage.paths]
source = ["src", "tests"]

[tool.coverage.run]
branch = true
source = ["gentimer"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.black]
line-length = 80
include = '\.pyi?$'
exclude = '''
(
    migrations
    | .mypy_cache
    | .pytest_cache
    | .tox
    | .nox
    | __pycache__
)
'''

[tool.isort]
include_trailing_comma = true
line_length = 80
multi_line_output = 3

force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
force_alphabetical_sort = true
force_sort_within_sections = true

[tool.flake8]
select = ["B","BLK","C","E","F","I","S","W"]
ignore = ["E203","E501","W503", "S101"]
max-line-length = 80
application-import-names = ["gentimer", "tests"]
import-order-style = "google"
